[gd_scene load_steps=3 format=3 uid="uid://bjntio5gweu1a"]

[ext_resource type="Script" path="res://DiceTrayData/dice_options_menu.gd" id="1_404gr"]

[sub_resource type="Theme" id="Theme_1glhj"]

[node name="DiceOptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_404gr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -20.0
offset_right = 20.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ChangeColors" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 60
text = "Change Colors"

[node name="DiceStyles" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 60
text = "Dice Styles"

[node name="FatigueDie" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 60
text = "Fatigue Die"

[node name="SoundAndVibe" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 60
text = "Sounds & Vibe"

[node name="Legal" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 60
text = "Legal"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 60
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ChangeColors" to="." method="_on_change_colors_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DiceStyles" to="." method="_on_dice_styles_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FatigueDie" to="." method="_on_fatigue_die_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SoundAndVibe" to="." method="_on_sound_and_vibe_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Legal" to="." method="_on_legal_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
